Fixed overlay panel misaligned

--- a/application/public/css/arc-front.css
+++ b/application/public/css/arc-front.css
@@ -128,6 +128,7 @@
   .pzarchitect .pzarc-panel .pzarc-panel-overlay {
     position: absolute;
     top: 0;
+    left: 0;
     bottom: 0;
     width: 100%;
     height: 100%;
